# mdindex

./: README.md  mise.toml  pyproject.toml
src/mdindex/: __init__.py  __main__.py
tests/: test_mdindex.py
tests/__snapshots__/: test_mdindex.ambr
tests/examples/: README.md  root.md
tests/examples-toc/: README.md  clear-not-long-enough.md  codeblocks.md  h1-underlined.md  h1.md  multiple-h1.md  no-h1-or-h2.md  no-h1.md  no-headers.md  no-headings.md  standard.md  too-few-headers.md  too-few-headings.md
tests/examples/bar/: README.md
tests/examples/baz/: camelCasedFilename.md  dash-cased-filename.md  snake_cased_filename copy.md
tests/examples/foo/: one.md  two.md  underlined.md
