[project]
name = "mdindex"
description = "Create index files and table of contents for collections of markdown files."
readme = "README.md"
authors = [
    { name = "Charles Lirsac", email = "code@lirsac.com" }
]
requires-python = ">=3.9"
dynamic = ["version"]
classifiers = []

dependencies = []

[project.scripts]
mdindex = "mdindex.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/mdindex/__main__.py"


[dependency-groups]
dev = [
]
